Updated index, about html and css

--- a/e-commerce/templates/about.html
+++ b/e-commerce/templates/about.html
@@ -186,6 +186,107 @@
               </div>
             </section>
           </section>
+
+          <section class="review-container">
+            <h2 class="arrivals t-center review">What Our Customers Say</h2>
+
+            <div class="d-flex review-card-container">
+              <section class="review-card">
+                <section class="rating_pink">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                </section>
+                <div>
+                  <p class="rate">
+                    Sed odio donec curabitur auctor amet tincidunt non odio enim
+                    felis tincidunt amet morbi egestas hendrerit.
+                  </p>
+                </div>
+                <div class="review-img">
+                  <img src="assets/images/review-1.jpg" alt="" />
+                </div>
+                <p class="reviewer-name">JENNIFER LEWIS</p>
+              </section>
+
+              <section class="review-card">
+                <section class="rating_pink">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                </section>
+                <div>
+                  <p class="rate">
+                    Sed odio donec curabitur auctor amet tincidunt non odio enim
+                    felis tincidunt amet morbi egestas hendrerit.
+                  </p>
+                </div>
+                <div class="review-img">
+                  <img src="assets/images/review-2.jpg" alt="" />
+                </div>
+                <p class="reviewer-name">ALICIA HEART</p>
+              </section>
+
+              <section class="review-card">
+                <section class="rating_pink">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                </section>
+                <div>
+                  <p class="rate">
+                    Sed odio donec curabitur auctor amet tincidunt non odio enim
+                    felis tincidunt amet morbi egestas hendrerit.
+                  </p>
+                </div>
+                <div class="review-img">
+                  <img src="assets/images/review-3.jpg" alt="" />
+                </div>
+                <p class="reviewer-name">JUAN CARLOS</p>
+              </section>
+            </div>
+
+            <p class="follow">Follow us <a href="">@flawlesscleanser</a></p>
+
+            <section class="more-img d-flex">
+              <section class="more-images">
+                <a href="">
+                  <img src="assets/images/more-img-1.jpg" alt="" />
+                </a>
+              </section>
+              <section class="more-images">
+                <a href="">
+                  <img src="assets/images/more-img-2.jpg" alt="" />
+                </a>
+              </section>
+              <section class="more-images">
+                <a href="">
+                  <img src="assets/images/more-img-3.jpg" alt="" />
+                </a>
+              </section>
+              <section class="more-images">
+                <a href="">
+                  <img src="assets/images/more-img-4.jpg" alt="" />
+                </a>
+              </section>
+              <section class="more-images">
+                <a href="">
+                  <img src="assets/images/more-img-5.jpg" alt="" />
+                </a>
+              </section>
+              <section class="more-images">
+                <a href="">
+                  <img src="assets/images/more-img-6.jpg" alt="" />
+                </a>
+              </section>
+            </section>
+          </section>
         </section>
       </main>
 
