--- a/e-commerce/templates/index.html
+++ b/e-commerce/templates/index.html
@@ -29,8 +29,8 @@
                         <ul class="d-flex options">
                             <li><a href="">HOME</a></li>
                             <li><a href="/e-commerce/templates/shop.html">SHOP</a></li>
-                            <li><a href="">ABOUT</a></li>
-                            <li><a href="">CONTACT</a></li>
+                            <li><a href="/e-commerce/templates/about.html">ABOUT</a></li>
+                            <li><a href="/e-commerce/templates/contact.html">CONTACT</a></li>
                         </ul>
                     </section>
     
