--- a/ecommerce/templates/contact.html
+++ b/ecommerce/templates/contact.html
@@ -50,7 +50,7 @@
     ></script>
     <link
       rel="shortcut icon"
-      href="/e-commerce/templates/assets/images/cropped-favicon-192x192.jpg"
+      href="/ecommerce/templates/assets/images/cropped-favicon-192x192.jpg"
       type="image/x-icon"
     />
   </head>
@@ -78,7 +78,7 @@
 
             <section class="profile_cart d-flex header-section3">
               <section>
-                <a href=""><i class="fa-solid fa-user"></i></a>
+                <a href="/ecommerce/templates/login.html"><i class="fa-solid fa-user"></i></a>
               </section>
               <section>
                 <span>$0.00</span>
