--- a/ecommerce/templates/index.html
+++ b/ecommerce/templates/index.html
@@ -27,10 +27,10 @@
                 <section class="nav-container d-flex">
                     <section class="header-options header-section1">
                         <ul class="d-flex options">
-                            <li><a href="">HOME</a></li>
-                            <li><a href="/e-commerce/templates/shop.html">SHOP</a></li>
-                            <li><a href="/e-commerce/templates/about.html">ABOUT</a></li>
-                            <li><a href="/e-commerce/templates/contact.html">CONTACT</a></li>
+                            <li><a href="/ecommerce/templates/index.html">HOME</a></li>
+                            <li><a href="/ecommerce/templates/shop.html">SHOP</a></li>
+                            <li><a href="/ecommerce/templates/about.html">ABOUT</a></li>
+                            <li><a href="/ecommerce/templates/contact.html">CONTACT</a></li>
                         </ul>
                     </section>
     
@@ -40,7 +40,7 @@
     
                     <section class="profile_cart d-flex header-section3">
                         <section>
-                            <a href=""><i class="fa-solid fa-user"></i></a>
+                            <a href="/ecommerce/templates/login.html"><i class="fa-solid fa-user"></i></a>
                         </section>
                         <section>
                             <span>$0.00</span>
