--- a/ecommerce/templates/moisturisers.html
+++ b/ecommerce/templates/moisturisers.html
@@ -29,10 +29,10 @@
                 <section class="nav-container d-flex">
                     <section class="header-options header-section1">
                         <ul class="d-flex options">
-                            <li><a class="a-nav" href="/e-commerce/templates/index.html">HOME</a></li>
-                            <li><a class="a-nav" href="/e-commerce/templates/shop.html">SHOP</a></li>
-                            <li><a class="a-nav" href="">ABOUT</a></li>
-                            <li><a class="a-nav" href="">CONTACT</a></li>
+                            <li><a class="a-nav" href="/ecommerce/templates/index.html">HOME</a></li>
+                            <li><a class="a-nav" href="/ecommerce/templates/shop.html">SHOP</a></li>
+                            <li><a class="a-nav" href="/ecommerce/templates/about.html">ABOUT</a></li>
+                            <li><a class="a-nav" href="/ecommerce/templates/contact.html">CONTACT</a></li>
                         </ul>
                     </section>
     
@@ -42,7 +42,7 @@
     
                     <section class="profile_cart d-flex header-section3">
                         <section>
-                            <a href=""><i class="fa-solid fa-user"></i></a>
+                            <a href="/ecommerce/templates/login.html"><i class="fa-solid fa-user"></i></a>
                         </section>
                         <section>
                             <span class="cart-total">$0.00</span>
@@ -79,18 +79,18 @@
 
                     <section class="filter-categories">
                         <p class="filter">Filter by Categories</p>
-                        <a href="/e-commerce/templates/bodyLotion.html" class="filter-products">Body Lotion <span>(3)</span></a>
-                        <a href="/e-commerce/templates/bundles.html" class="filter-products">Bundles  <span>(1)</span></a>
-                        <a href="/e-commerce/templates/cleanser.html" class="filter-products">Cleanser <span>(6)</span></a>
-                        <a href="/e-commerce/templates/moisturisers.html" class="filter-products">Moisturizers <span>(3)</span></a>
-                        <a href="/e-commerce/templates/sunscreen.html" class="filter-products">Sunscreens <span>(2)</span></a>
+                        <a href="/ecommerce/templates/bodyLotion.html" class="filter-products">Body Lotion <span>(3)</span></a>
+                        <a href="/ecommerce/templates/bundles.html" class="filter-products">Bundles  <span>(1)</span></a>
+                        <a href="/ecommerce/templates/cleanser.html" class="filter-products">Cleanser <span>(6)</span></a>
+                        <a href="/ecommerce/templates/moisturisers.html" class="filter-products">Moisturizers <span>(3)</span></a>
+                        <a href="/ecommerce/templates/sunscreen.html" class="filter-products">Sunscreens <span>(2)</span></a>
 
                     
                     </section>
                 </section>
 
                 <section class="shop-products">
-                    <p class="home-shop"><a href="/e-commerce/templates/index.html">Home </a>/ Shop</p>
+                    <p class="home-shop"><a href="/ecommerce/templates/index.html">Home </a>/ Shop</p>
                     <p class="sun-screen">Moisturizer</p>
 
                     <section class="d-flex sort-pattern">
