--- a/e-commerce/templates/contact.html
+++ b/e-commerce/templates/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Skin cleanser store</title>
+    <title>Contact - Skin cleanser store</title>
     <link rel="stylesheet" href="assets/css/contact.css" />
     <link
       rel="stylesheet"
@@ -62,7 +62,7 @@
             <section class="header-options header-section1">
               <ul class="d-flex options">
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="">SHOP</a></li>
+                <li><a href="shop.html">SHOP</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
               </ul>
@@ -240,18 +240,12 @@
                 <p>
                   <label for="name">Name <span>*</span></label>
                 </p>
-                <input type="text" name="name" id="name" required autofocus />
+                <input type="text" name="name" id="name" required />
                 <p></p>
                 <p>
                   <label for="email">Email <span>*</span></label>
                 </p>
-                <input
-                  type="email"
-                  name="email"
-                  id="email"
-                  required
-                  autocomplete="on"
-                />
+                <input type="email" name="email" id="email" required />
                 <p></p>
                 <p>
                   <label for="message">Comment or Message <span>*</span></label>
