--- a/ecommerce/templates/about.html
+++ b/ecommerce/templates/about.html
@@ -62,7 +62,7 @@
             <section class="header-options header-section1">
               <ul class="d-flex options">
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="/e-commerce/templates/shop.html">SHOP</a></li>
+                <li><a href="shop.html">SHOP</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
               </ul>
