--- a/ecommerce/templates/index.html
+++ b/ecommerce/templates/index.html
@@ -45,13 +45,29 @@
                         <section>
                             <span>$0.00</span>
                         </section>
-                        <section>
-                            <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+                        <section >
+                            <section>
+                                <a href="" ><i class="fa-solid fa-cart-shopping" id="cartBag"></i></a>
+                            </section>
 
                             <div class="cart-num d-flex">
                                 <p>0</p>
                             </div>
                         </section>
+                    </section>
+
+                    <section class="openCart" id="openCart1">
+                        <div class="d-flex openCart-close">
+                            <p>Shopping cart</p>
+                            <p><a id="x" href=""><i class="fa-solid fa-xmark"></i></a></p>
+                        </div>
+                        <hr>
+                        
+                        <p class="openCart-products">No products in the cart</p>
+                        
+
+                        <a class="openCart-a" href="">CONTINUE SHOPPING</a>
+
                     </section>
     
                 </section>
@@ -728,5 +744,6 @@
 
         </footer>
     </div>
+    <script src="/ecommerce/templates/assets/js/side-cart.js"></script>
 </body>
 </html>
