--- a/ecommerce/templates/product.html
+++ b/ecommerce/templates/product.html
@@ -83,7 +83,7 @@
     
                     <section class="d-flex productCart">
                         <div class="product-num"><p>1</p></div>
-                        <div class="addToCart"><a href="">ADD TO CART</a></div>
+                        <div class="addToCart"><a href="/ecommerce/templates/cart.html">ADD TO CART</a></div>
                     </section>
                     <hr>
                     <p class="catProductName">Category: <a href="">Cleanser</a></p>
