--- a/ecommerce/templates/assets/css/styles.css
+++ b/ecommerce/templates/assets/css/styles.css
@@ -286,6 +286,7 @@ a{
 }
 
 .productCard{
+    width: 32%;
     margin-bottom: 2rem;
 }
 
@@ -309,13 +310,13 @@ a{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    /* transition: transform 0.3s; */
+    transition: transform 0.3s;
 }
     /* TO MAKE THE IMAGES BIGGER ON HOVER */
-/* .product-img_container:hover img{
-    transform: scale(2);
+.product-img_container:hover img{
+    transform: scale(1.05);
     cursor: pointer;
-} */
+}
 
 .card-cart{
     color: black;
@@ -398,6 +399,8 @@ a{
     line-height: 1.6rem;
     color: #646467;
 }
+
+/* HERO IMAGE 2 */
 
 .background-img_2{
     background: url("/ecommerce/templates/assets/images/pic10.jpg");
@@ -651,6 +654,10 @@ footer{
     font-size: 0.9rem;
 }
 
+
+
+/* MEDIA QUERY */
+
 @media screen and (max-width: 1280px) {
     .header-section1{
         display: none;
@@ -659,4 +666,225 @@ footer{
     .header-section4{
         display: block;
     }
+
+    .header-section3{
+        width: 20%;
+    }
+
+    .background-img{
+        height: 30rem;
+    }
+
+    .hero-text-container{
+        width: 60%;
+        margin-top: 3rem;
+        margin-left: 3rem;
+    }
+
+    .hero-text-container h1{
+        font-size: 3rem;
+    }
+
+    /* ABOUT */
+
+    .about-homepage{
+        margin-top: 10rem;
+    }
+
+    .main-container{
+        margin: auto;
+        width: 90%;
+        margin-top: 7rem;
+    }
+
+    .about-img img{
+        height: 50vh;
+        width: 80%;
+        object-fit: contain;
+    }
+
+    .about-writeup-container{
+        width: 48%;
+    }
+    
+    /* ORGANIC CARE */
+    .organic1{
+        width: 30%;
+    }
+
+    .organic-care p{
+        font-size: 0.9rem;
+    }
+
+    /* HERO IMAGE 2 */
+
+    .background-img_2{
+        height: 28rem;
+    }
+    
+    .flawless{
+        font-size: 2.5rem;
+    }
+
+    .arrivals{
+        font-size: 2.2rem;
+    }
+
+    /* REVIEWS */
+
+    .review-container{
+        margin-top: 10rem;
+    }
+    
+    .review-card{
+        width: 25%;
+    }
+    
+    .rate{
+        font-size: 1rem;
+    }
+
+    /* FOOTER */
+    .footer-services{
+        width: 90%;
+        flex-wrap: wrap;
+    }
+
+    .footer-serviceContainer{
+        width: 45%; 
+    }
+
+    .icon-container{
+        margin-bottom: 1rem;
+    }
+
+    .footer-icons{
+        width: 35%;
+    }
+    
+    .footer-social_media{
+        width: 40%;
+    }
 }
+
+@media screen and (max-width: 540px){
+    /* body{
+        background-color: red;
+    } */
+
+    /* NAV/HERO */
+
+    .business-title-img{
+        width: 125px;
+    }
+
+    .cartTotal{
+        display: none;
+    }
+
+    #navOpen{
+        font-size: 1.2rem;
+    }
+
+    .header-section3{
+        width: 15%;
+    }
+
+    .background-img{
+        height: 25rem;
+    }
+
+    .hero-text-container{
+        width: 95%;
+        margin-top: 2rem;
+        margin-left: 1rem;
+    }
+
+    .hero-text-container h1{
+        font-size: 2rem;
+    }
+
+    .hero-text-container p{
+        font-size: 0.8rem;
+    }
+
+    /* ABOUT */
+
+    .productCard{
+        width: 44%;
+    }
+
+    .main-container{
+        margin-top: 2rem;
+    }
+
+    .about-img img{
+        height: 100vh;
+    }
+
+     /* ORGANIC CARE */
+
+     .organic-care{
+        flex-wrap: wrap;
+        
+     }
+     .organic1{
+        width: 80%;
+        margin: auto;
+    }
+
+    /* HERO IMAGE 2 */
+
+    .background-img_2{
+        height: 25rem;
+    }
+    
+    .flawless{
+        font-size: 2rem;
+    }
+
+    .arrivals{
+        font-size: 1.5rem;
+    }
+
+     /* REVIEWS */
+
+     .review-container{
+        margin-top: 8rem;
+    }
+
+    .review-card-container{
+        flex-wrap: wrap;
+    }
+    
+    .review-card{
+        width: 80%;
+        margin: auto;
+    }
+
+     /* FOOTER */
+     .footer-services{
+        width: 90%;
+        margin: auto;
+        
+    }
+
+    .footer-serviceContainer{
+        width: 80%; 
+        margin: auto;
+    }
+
+    .footer-container{
+        height: 20rem;
+    }
+
+    .footer-icons{
+        width: 50%;
+    }
+    
+    .footer-social_media{
+        width: 50%;
+    }
+}
+    
+
