--- a/ecommerce/templates/signup.html
+++ b/ecommerce/templates/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Log In Skin cleanser store</title>
-    <link rel="stylesheet" href="assets/css/login.css" />
+    <link rel="stylesheet" href="assets/css/signup.css" />
     <link
       rel="shortcut icon"
       href="/e-commerce/templates/assets/images/cropped-favicon-192x192.jpg"
@@ -40,12 +40,12 @@
         <input type="checkbox" name="check" id="check" />
         <label for="check">Remember Me</label>
 
-        <button type="submit">Log In</button>
+        <button type="submit">Sign Up</button>
       </form>
     </section>
 
     <section class="links">
-      <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+      <p>Already have an account? <a href="login.html">Log In</a></p>
       <p><a href="">Lost your password?</a></p>
       <p><a href="">← Go to Skin Cleanser Store</a></p>
     </section>
